# crommeter

./: .gitignore  README.md
firmware/apps/crommeter/: Cargo.toml
firmware/apps/test-microphone/: Cargo.toml  firmware.uf2
firmware/apps/test-microphone/.cargo/: config.toml
firmware/apps/test-microphone/src/: main.rs
firmware/arduino/crommeter/: crommeter.ino
firmware/arduino/test_7_seg/: test_7_seg.ino
firmware/arduino/test_button/: test_button.ino
firmware/arduino/test_i2s_db/: test_i2s_db.ino
firmware/arduino/test_i2s_input/: test_i2s_input.ino
firmware/arduino/test_i2s_isr/: test_i2s_isr.ino
firmware/arduino/test_leds/: test_leds.ino
firmware/crommeter/: firmware.uf2
firmware/libraries/pio-i2s/: Cargo.toml
firmware/libraries/pio-i2s/src/: lib.rs
firmware/rust/apps/test-microphone/: firmware.uf2
firmware/rust/libraries/pio-i2s/: Cargo.toml
firmware/rust/libraries/pio-i2s/src/: lib.rs
firmware/test-microphone/: Cargo.toml  firmware.uf2  memory.x
firmware/test-microphone/src/: i2s_in.rs  main.rs
hardware/artwork/: cromulon-layers.xcf  cromulon.ai
hardware/crommeter/: #auto_saved_files#  BOM.csv  _autosave-crommeter.kicad_sch  crommeter.kicad_pcb  crommeter.kicad_prl  crommeter.kicad_pro  crommeter.kicad_sch  fp-lib-table  sym-lib-table  ~crommeter.kicad_pcb.lck
hardware/gerbers/: crommeter-B_Cu.gbr  crommeter-B_Mask.gbr  crommeter-B_Paste.gbr  crommeter-B_Silkscreen.gbr  crommeter-Edge_Cuts.gbr  crommeter-F_Cu.gbr  crommeter-F_Mask.gbr  crommeter-F_Paste.gbr  crommeter-F_Silkscreen.gbr  crommeter-NPTH.drl  crommeter-PTH.drl  crommeter-job.gbrjob
hardware/libraries/10118194_0001LF/10118194_0001LF.pretty/: AMPHENOL_10118194-0001LF.kicad_mod
hardware/libraries/10129380_903001BLF/: 10129380-903001BLF.kicad_sym  10129380-903001BLF.step
hardware/libraries/10129380_903001BLF/10129380-903001BLF.pretty/: AMPHENOL_10129380-903001BLF.kicad_mod
hardware/libraries/BSD840NH6327XTSA1/: BSD840NH6327XTSA1.kicad_sym  BSD840NH6327XTSA1.step
hardware/libraries/BSD840NH6327XTSA1/BSD840NH6327XTSA1.pretty/: TRANS_BSD840NH6327XTSA1.kicad_mod
hardware/libraries/Badgelife_SAO_v169bis_20190321-0053/badgelife_sao_v169bis.pretty/: Badgelife-SAOv169-SAO-2x3.kicad_mod
hardware/libraries/CUW_Y3SH_B2_GFJD_5J6T_Z242_20_R18_Z/: CUW_Y3SH.B2-GFJD-5J6T-Z242-20-R18-Z.kicad_sym
hardware/libraries/artwork.pretty/: cromulon_copper.kicad_mod  cromulon_mask.kicad_mod  cromulon_mask_bot.kicad_mod  cromulon_silkscreen.kicad_mod
hardware/libraries/custom/: custom.kicad_sym
hardware/libraries/ics-43434/: 2025-09-21_18-18-04.kicad_sym
hardware/libraries/qwiic_connector/: qwiic_connector.kicad_sym
(+6 files in other folders)
