[package]
name = "test-microphone"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread"] }
embassy-futures = "0.1.2"
embassy-time = "0.5.0"
embassy-rp = { version = "0.8.0", features = ["time-driver", "critical-section-impl", "rp235xa"] }
embassy-usb = "0.5.1"
embassy-usb-logger = "0.5.1"

log = "0.4"

cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"

panic-probe = { version = "1.0.0" }

static_cell = "2.1"

[profile.dev]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true